app/assets/stylesheets/pages.css.scss
.has-padding {
	padding-left: 1rem;
	padding-right: 1rem;
	padding-top: 5rem;
	padding-bottom: 5rem;
}

.max-width {
	max-width: 960px;
	margin: auto;
	position: relative;
}

 .faq .section-header{
 	margin-bottom: 4rem;
 }

.faqbody {
	margin-bottom: 7rem;
}

.faq .center h1 {
	margin-top: 0px;
	padding-top: 30px;
}

.faq .panel-default > .panel-heading {
	color: #5b5b5b;
	border-bottom: solid 1px #e5e5e5;
}

.faq .panel {
	background-color: #fff;
}

.faq .panel-group .panel-default {
	border-radius: 0px;
	border: none;
}

.faq .panel-title {
	font-size: 20px;
}

.faq .panel-title a {
	display: block;
	padding-top: 15px;
	padding-bottom: 15px;
	font-weight: 400;
}

.faq .panel-title a:hover {
	background-color: none;
	padding-left: 30px;
	text-decoration: none;
	font-weight: 400;
}

.testimonial {
	background-color: #fcfbfa;
	h1 {
		font-family: Arial;
		font-weight: 600;
		margin-bottom: 40px;
		color: #5b5b5b;
	}
	p, li {
		font-size: 18px;
		color: #5b5b5b;
	}
	.user {
		border-top: 1px solid #b8c2ad;
		padding: 10px 0px;
		h2 {
			font-size: 18px;
			font-weight: 500;
			text-align: right;
			padding-right: 80px;
			color: #5b5b5b;
		}
	}
}

.thanks {
	.box {
		margin: 150px 200px;
		padding: 60px;
		background-color: #f4f3ee;
		border-radius: 10px;
		h3 {
			margin-bottom: 35px;
			font-weight: 400;
		}
		h4 {
			margin-bottom: 40px;
			font-weight: 400;
		}
		.btn-primary {
			background-color: #70a885;
			border: none;
		}
		.btn-primary:hover {
			background-color: #8cb99d;
		}
	}
}

.projects {
	background-image: url('https://dl.dropboxusercontent.com/s/0x4yhpdt689zoy1/BRbanner3.png');
	background-position: center;
	background-repeat: no-repeat;
	padding-bottom: 6rem;
	height: 600px;
	.section-header {
		margin-bottom: 5rem;
		padding: 0rem 10rem;
	}
	h1 {
		font-weight: 700;
		font-size: 50px;
		letter-spacing: 0.5px;
		color: #fff;
		text-shadow: 0 -1px 1px rgba(0,0,0,1);
		margin-top: 16rem;
	}
	h2 {
		font-weight: 500;
		color: #fff;
		text-shadow: 0 -1px 1px rgba(0,0,0,1);
		font-size: 32px;
	}
	h3 {
		color: #5b5b5b;
	}
	p {
		color: #6b6b6b;
	}
	.marketplaceproject {
		.btn-success {
			background-color: #7b7b7b;
			color: #fff;
			border: none;
			letter-spacing: 1px;
			font-size: 20px;
			padding: 7px 15px;
			font-weight: 400;
		}
		.btn-success:hover {
			background-color: #5b5b5b;
		}
		.btn-default {
			background-color: #70a885;
			border: none;
			color: #fff;
			letter-spacing: 1px;
			font-size: 20px;
			padding: 7px 15px;
			margin-right: 1rem;
			font-weight: 400;
		}
		.btn-default:hover {
			background-color: #9ac2a9;
		}
	}
}

.summary {
	padding-top: 6rem;
	padding-bottom: 1rem;
	background-color: #f4f3ee;
	.section-header {
		padding-right: 5rem;
		h1 {
			font-size: 4rem;
			font-weight: 600;
			color: #3f3f3f;
		}
	}
	.thumbnail {
		background-color: #f4f3ee;
		border: none;
		margin-bottom: 0px;
	}
	.title {
		.container {
			background-color: #f4f3ee;
			margin-top: -105px;
			width: 15%;
			height: 70px;
			border-radius: 5px;
			h1 {
				color: #5b5b5b;
				font-size: 25px;
				margin-top: 20px;
				margin-bottom: 20px;
				font-weight: 600;
			}
		}
	}
	h2 {
		font-size: 22px;
		font-weight: 500;
		color: #5b5b5b;
	}
	p {
		font-size: 16px;
		color: #6b6b6b;
	}
}

.difference {
	background-color: #7ebd96;
	padding: 3rem 0rem 7rem 0rem;
	.container {
		border-radius: 5px;
	}
	.section-header {
		 h1 {
			font-weight: 600;
			font-size: 30px;
			color: #fff;
		}
	}
	h3 {
		font-size: 17px;
		font-weight: 400;
		line-height: 1.5;
		color: #fff;
	}
	.check {
		list-style-image: url('https://dl.dropboxusercontent.com/s/ly1407fah0viibt/checkmark.png');
		list-style-position: inside;
		font-size: 12px;
		line-height: 1.5;
	}
	.features {
		padding: 20px;
		margin-top: 30px;
		background-color: #fff;
		border-radius: 5px;
		box-shadow: 5px 5px 3px #e5e5e5;
		li {
			font-size: 15px;
			font-weight: 500;
			padding: 7px 0px;
		}
		.col-md-6 {
			padding: 15px 20px;
		}
	}
	.btn-success {
		background-color: #70a885;
		border: none;
		margin-top: 2rem;
	}
	.btn-success:hover {
		background-color: #9ac2a9;
	}
}

.courses {
	h1 {
		color: #a0a0a0;
		margin-bottom: 5rem;
		font-weight: 600;
		font-size: 45px;
		background-color: #666666;
	    -webkit-background-clip: text;
	    -moz-background-clip: text;
	    background-clip: text;
	    color: transparent;
	    text-shadow: rgba(255,255,255,0.3) 0px 2px 2px;
	}
	.thumbnail {
		box-shadow: 5px 5px 3px #cecece;
	}
	.title {
		color: #5b5b5b;
		}
	p {
		color: #7b7b7b;
	}
}

.etsy {
	background-color:  #f4f3ee;
}

.etsy .max-width {
	max-width: 1200px;
}

.etsy .has-padding {
	padding-top: 35px;
}

.etsy .section-header {
	padding-bottom: 6rem;
}

.etsy .col-md-4 {
	.thumbnail {
		background-color: #fff;
		padding: 15px 10px;
		border-radius: 7px;
	}
	p {
	color: #888;
	font-size: 18px;
	}
}

.etsy .col-md-4 h3 {
	color: #5b5b5b;
	font-weight: 500;
	font-size: 25px;
}
.etsy .section-header {
	h1 {
	color: #3f3f3f;
	font-size: 45px;
	font-weight: 600;
	margin-bottom: 5rem;
	background-color: #666666;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    background-clip: text;
    color: transparent;
    text-shadow: rgba(255,255,255,0.3) 0px 2px 2px;
	}
	.demovideo {
		width: 700px;
		height: 394px;
		margin: auto;
		position: relative;
	}
}

.etsy img {
	margin-bottom: 2rem;
}

.video {
	background-image: url('https://dl.dropboxusercontent.com/s/m4pjclnyevrol68/shattered.png');
	h1 {
		color: #fff;
		margin-bottom: 4rem;
	}
}

.syllabus {
/*	background-image: url('https://dl.dropboxusercontent.com/s/cla2doim9l3m12g/dark_fish.png');
*/
	background-color: #2d2d2d;
}

.syllabus .section-header h1 {
	color: #e5e5e5;
	margin-bottom: 3rem;
}

.syllabus .section-header h3 {
	color: #e5e5e5;
	font-weight: 200;
	margin-bottom: 7rem;
}

.syllabus-details {
	margin-bottom: 7rem;
}

.syllabus .center h1 {
	margin-top: 0px;
	padding-top: 30px;
}

.syllabus .panel-default > .panel-heading {
/*	background-image: url('https://dl.dropboxusercontent.com/s/cla2doim9l3m12g/dark_fish.png');
*/
	background-color: #2d2d2d;
	color: #e5e5e5;
	border-bottom: solid 1px #e5e5e5;
}

.syllabus .panel {
	background-color: whitesmoke;
}

.syllabus .panel-group .panel-default {
	border-radius: 0px;
	border: none;
}

.syllabus .panel-title {
	font-size: 20px;
}

.syllabus .panel-title a {
	display: block;
	padding-top: 15px;
	padding-bottom: 15px;
	font-weight: 400;
}

.syllabus .panel-title a:hover {
	background-color: none;
	padding-left: 30px;
	text-decoration: none;
	font-weight: 400;
}

.marketplaces {
	.thumbnail {
		border: none;
	}
	h1 {
		color: #a0a0a0;
		margin: 10rem 0rem 5rem;
		font-weight: 600;
		font-size: 45px;
		background-color: #666666;
	    -webkit-background-clip: text;
	    -moz-background-clip: text;
	    background-clip: text;
	    color: transparent;
	    text-shadow: rgba(255,255,255,0.3) 0px 2px 2px;
	}
	.btn-xs {
		position: right;
		margin: 0px 5px;
		font-size: 13px;
		text-transform: uppercase;
		padding: 10px;
		color: #fff;
		font-weight: 500;
		border: none;
	}
	.a {
		background-color: #70a885;
	}
	.a:hover {
		background-color: #8cb99d;
	}
	.b {
		background-color: #b7b7b7;
	}
	.b:hover {
		background-color: #cecece;
	}
}

.action {
	background-color:  #f4f3ee;
	.section-header {
	margin-bottom: 3rem;
	}
	h1 {
		color: #a0a0a0;
		margin: 5rem 0rem 5rem;
		font-weight: 600;
		font-size: 30px;
		background-color: #666666;
	    -webkit-background-clip: text;
	    -moz-background-clip: text;
	    background-clip: text;
	    color: transparent;
	    text-shadow: rgba(255,255,255,0.3) 0px 2px 2px;
	}
	.btn-xs {
		position: right;
		margin: 0px 5px;
		font-size: 13px;
		text-transform: uppercase;
		padding: 10px;
		color: #fff;
		font-weight: 500;
		margin-top: 3rem;
		border: none;
	}
	.a {
		background-color: #70a885;
	}
	.a:hover {
		background-color: #8cb99d;
	}
	.b {
		background-color: #b7b7b7;
	}
	.b:hover {
		background-color: #cecece;
	}
	li {
		font-size: 20px;
		color: #5b5b5b;
		line-height: 1.5;
	}
}

.aboutus {
	background-color: #fcfbfa;
	padding-bottom: 9rem;
}

.aboutus .long {
	background-color: white;
	margin: 10px 47px;
	padding-top: 10px;
	border-radius: 10px;
	border: 2px solid #e2e1e1;
}

.aboutus .thumbnail {
	background-color: white;
}

.aboutus .name{
	border: none;
	padding-top: 3rem;;
}

.aboutus .big {
	padding-left: 30px;
	padding-right: 20px;
}

.aboutus h1 {
	padding-bottom: 4rem;
	color: #3f3f3f;
	font-size: 4rem;
	font-weight: 600;
}

.aboutus h2 {
	font-weight: 600;
	color: #484848;
}

.aboutus h3 {
	color: #7b7b7b;
	font-weight: 400;
}

.aboutus p {
	color: #5b5b5b;
	font-weight: 300;
	font-size: 19px;
}

